--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -125,7 +125,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f3e3ea2a-9a5f-49c2-9977-20e9666a59ff",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -170,22 +172,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c47e0b77-1b53-4021-85e0-4e2c99953d59",
+   "id": "4dadf215-1f53-4831-9605-6864f2e5f320",
    "metadata": {},
    "source": [
     "\n",
-    "## Author\n",
     "\n",
-    " Huriye Şengül"
+    "** Objectiveas:**\n",
+    "\n",
+    "-  List popular languages for Data Science\n",
+    "  \n",
+    "-  List commonly used libraries in Data Science\n",
+    "\n",
+    "-  Create tables using markdown\n",
+    "\n",
+    "-  Perform arithmetic operations in Python\n",
+    "\n",
+    "-  Convert minutes to hours using Python expressions\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0d367e7-8363-4b1f-804b-9c605b6af306",
+   "id": "876144a1-8c33-48b3-9eb9-96e68d11d993",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c47e0b77-1b53-4021-85e0-4e2c99953d59",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## Author\n",
+    "\n",
+    " Huriye Şengül\n",
+    " "
+   ]
   }
  ],
  "metadata": {
